kubernetes/apps/network/envoy-gateway/app/internal/gateway.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname internal.${SECRET_DOMAIN}
    gatus.home-operations.com/endpoint: |-
      group: guarded
      guarded: true
      ui:
        hide-hostname: true
        hide-url: true
spec:
  gatewayClassName: envoy-internal
  addresses:
    - type: IPAddress
      value: &address "${ENVOY_INTERNAL_LBIP}"
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      io.cilium/lb-ipam-ips: *address
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: envoy-internal
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: envoy-gateway-${SECRET_DOMAIN/./-}-tls
    - name: adb-11
      protocol: TCP
      port: 5555
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: TCPRoute
    - name: adb-13
      protocol: TCP
      port: 5556
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: TCPRoute
